# intervals

./: .gitignore  =  CRIM_Model_0012.mei  CRIM_Model_0023.mei  CRIM_Model_0036.mei  CloseMatch.py  E17 Horwood, Salve Regina MEI.mxl  Gibbons.xml  Hours.txt  Intervals_onboarding_notes.md  Mi libertad en sosiego Encina.mxl  Morley_p_019.musicxml  ObservedPiece.py  Plaine_1567_75_2.sib.mei_msg.mei  Que es de ti desconsolado Encina.mxl  README-TEMP.md  README.md  Yo me estaba reposando Encina.mxl  classify.py  close_match.py  ema_to_intervals.py  intervals_play.py  main.py  main_objs.py  pandas_extension.py  pyproject.toml  requirements.txt  sandbox.py  test_cadences.py  test_constants.py  test_intervals.py  test_main_objs.py  test_notebook.ipynb  test_play_model.py  test_vis.py  visualizations.py
.github/: workflows
.github/workflows/: interval-test.yml  interval_test.yml
OMAC/: catalog-v001.xml  omac_claim.owl  omac_work.owl  readme.md
OMAC/data/: readme.md
OMAC/data/CRIM_data/: CRIM_Mass_0003.ttl  CRIM_Mass_0006.ttl  CRIM_Relationship_R1.ttl  CRIM_Relationship_R2.ttl  CRIM_observation1.ttl  CRIM_observation2.ttl  readme.md
OMAC/data/varia/: brahms_op25.ttl  mozart_k385.ttl  readme.md  schoenberg_arrangement.ttl
cleaned_mei/: CRIM_Mass_0001_2.mei  CRIM_Mass_0001_3.mei  CRIM_Mass_0001_4.mei  CRIM_Mass_0004_3.mei  CRIM_Mass_0005_2.mei  CRIM_Mass_0005_3.mei  CRIM_Mass_0006_4.mei  CRIM_Mass_0007_2.mei  CRIM_Mass_0007_3.mei  CRIM_Mass_0007_4.mei  CRIM_Mass_0011_4.mei  CRIM_Mass_0013_4.mei  CRIM_Mass_0014_3.mei  CRIM_Mass_0014_5.mei  CRIM_Mass_0015_3.mei  CRIM_Mass_0015_4.mei  CRIM_Mass_0015_5.mei  CRIM_Mass_0016_4.mei  CRIM_Mass_0016_5.mei  CRIM_Mass_0017_3.mei  CRIM_Mass_0018_4.mei  CRIM_Mass_0019_4.mei  CRIM_Mass_0020_3.mei  CRIM_Mass_0021_4.mei  CRIM_Model_0010.mei  CRIM_Model_0016.mei  CRIM_Model_0017.mei
crim_intervals/: __init__.py  corpus_tools.py  main_objs.py  sorting_lists.py  test_cadences.py  test_main_objs.py  test_vis.py  visualizations.py  visualizations_demo.py
crim_intervals/data/cadences/: CVFLabels.csv  groundTruth.csv
data/cadences/: CVFLabels.csv  Ignesti.csv  cadenceLabels.csv  cadenceLibrary.csv
intervals/: __init__.py  classify.py  main.py  main_objs.py  networks.py  visualizations.py  visualizations_demo.py
intervals/data/cadences/: CVFLabels.csv  cadenceLabels.csv  groundTruth.csv
sections/: 01_Introduction.md  02_NotesAndRests.md  03_MelodicIntervals.md  04_HarmonicIntervals.md  05_Lyrics.md  05_Ngrams.md  06_Durations.md  07_Lyrics.md  07_Lyrics_Homorhythm.md  07_N-grams.md  07_Ngrams.md  08_TimeSignatures.md  08_TimeSignatures_Beat_Strength.md  09_DetailIndex.md  09_Pandas.md  10_Cadences.md  11_Pandas.md  12_Modules.md  13_Visualizations.md
test/: test_cadences.py  test_constants.py  test_main_objs.py  test_vis.py
tests/: test_main_objs.py  test_vis.py
tutorial/: 01_Introduction.md  01_Introduction_and_Corpus.md  02_NotesAndRests.md  02_Notes_Rests.md  03_Durations.md  03_MelodicIntervals.md  04_HarmonicIntervals.md  04_TimeSignatures_Beat_Strength.md  05_Detail_Index.md  05_Ngrams.md  05_Ngrams_Heat_Maps.md  06_Melodic_Intervals.md  07_Harmonic_Intervals.md  07_Lyrics_Homorhythm.md  08_Contrapuntal_Modules.md  08_Modules.md  08_TimeSignatures_Beat_Strength.md  09_DetailIndex.md  09_Lyrics_Homorhythm.md  09_Ngrams_Heat_Maps.md  10_Cadences.md  10_Lyrics_Homorhythm.md  11_Cadences.md  11_Pandas.md  11_Presentation_Types.md  12_Model_Finder.md  12_Presentation_Types.md  13_Model_Finder.md  13_Musical_Examples_Verovio.md  13_Visualizations.md  14_Model_Finder.md  14_Python_Basics.md  14_Visualizations_Summary.md  15_Network_Graphs.md  15_Pandas_Basics.md  16_Model_Finder.md  16_Python_Basics.md  17_Pandas_Basics.md  18_Music21_Basics.md  18_Visualizations_Summary.md  (+5 more)
tutorials/: 06_Durations.md  08_TimeSignatures_Beat_Strength.md  09_DetailIndex.md  10_Cadences.md
