[tool.poetry]
name = "crim_intervals"
version = "2.0.12"
description = "CRIM intervals package"
readme = "README.md"
authors = ["Richard Freedman <rfreedma@haverford.edu>"]
license = "creative commons"
packages = [
    { include = "crim_intervals" },
]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
altair = "4.2.0"
certifi = "2020.12.5"
chardet = "^4.0.0"
h11 = "0.12.0"
httpcore = "0.13.2"
httpx = "0.18.1"
idna = "3.1"
ipykernel = "6.1.0"
ipython = "7.34.0"
jupyter-client = "6.1.12"
ipywidgets = "7.6.3"
joblib = "1.0.1"
lxml = "4.6.3"
more-itertools = "8.7.0"
music21 = "7.1.0"
numpy = "^1.20.2"
pandas = "1.2.4"
pyvis = "0.1.9"
python-dateutil = "^2.8.2"
pytz = "2021.1"
requests = "2.27.0"
rfc3986 = "1.4.0"
seaborn = "0.11.2"
six = "1.15.0"
sniffio = "^1.2.0"
textdistance = "4.2.1"
XlsxWriter = "3.0.2"
webcolors = "1.11.1"
verovio = "3.10.0"
statsmodels = "0.14.0"
plotly = "5.11.0"
plotly-express = "0.4.0"


[[tool.poetry_bumpversion.replacements]]
files = ["crim_intervals/__init__.py"]
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'


[[tool.poetry_bumpversion.replacements]]
files = ["README.md"]
search = 'Current Version: {current_version}'
replace = 'Current Version: {new_version}'


[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools","poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
